@@ -1,3 +1,8 @@
+== Current
+
+* 1 minor enhancement
+  * utilise Garlic::Generator in tabtab definition
+
 == 0.1.6 2008-11-27
 
 * 3 minor enhancements
